# xju-autopilot

./: README.md
interface/canbus_chassis/: CMakeLists.txt  package.xml
interface/canbus_chassis/msg/: ArbiratorInfo.msg  BrakeInfo.msg  CarMassInfo.msg  CarSpeedInfo.msg  CarStatus.msg  GearBoxInfo.msg  GnssImuInfo.msg  HuResqInfo.msg  ICAKey.msg  LVPwrInfo.msg  LatInfo.msg  LeadLineInfo.msg  LgtdInfo.msg  LightInfo.msg  Line.msg  NetManagerPdu.msg  SFDInfo.msg  SteerInfo.msg  TargetInfo.msg  TargetInfoArray.msg  ThrottleInfo.msg  WheelSpeedInfo.msg  WhiInfo.msg
interface/canbus_sensor/: CMakeLists.txt  package.xml
interface/canbus_sensor/msg/: CanfdData.msg  CanfdDataArray.msg  CanfdMsgType.msg  GnssNmea.msg  RadarObs.msg  RadarObsArray.msg  RadarStatus.msg  RadarType.msg  SensorGps.msg  SensorImu.msg  SensorLidar.msg  SensorMatch.msg  Vehicle.msg  WheelSpeed.msg
interface/common/: CMakeLists.txt  package.xml
interface/common/msg/: EngageAdvice.msg  ErrorCode.msg  FrenetFramePoint.msg  Header.msg  LocalizeState.msg  Path.msg  PathPoint.msg  Quaternion.msg  SLPoint.msg  STPoint.msg  SVPoint.msg  SpeedPoint.msg  StatusPb.msg  Trajectory.msg  TrajectoryPoint.msg  VehicleSignal.msg
interface/common_topics/: CMakeLists.txt  package.xml
interface/common_topics/include/common_topics/: common_topics.h  mcu_data_source.h  pnc.h  topics_all.h
interface/control/: CMakeLists.txt  package.xml
interface/control/msg/: Control.msg  Debug.msg  LateralDebug.msg  LongitudinalDebug.msg  MassIdentificationDebug.msg  MpcDebug.msg  PostDebug.msg  PreDebug.msg
interface/localization/: CMakeLists.txt  package.xml
interface/localization/msg/: GlobalLocInfo.msg  GlobalLocalizeResult.msg  LaneInLocInfo.msg  LaneLevelLocInfo.msg  LidarGlocOutput.msg  LocalLocalizeResult.msg  LocalizeOutput.msg  RoadLocInfo.msg  Transformd.msg
interface/nn/: CMakeLists.txt  package.xml
interface/nn/msg/: Box2D.msg  Box3D.msg  Boxes3D.msg  EmbeddingPoint.msg  IndexedEmbedding.msg  LaneLine.msg  LaneLineColor.msg  LaneLinePosition.msg  LaneLineSceneType.msg  LaneLineType.msg  LaneLines.msg  LineAttrs.msg  LineCurve.msg  Object.msg  Objects.msg  PointXYZI.msg  SpecialVehicleType.msg  SplitLine.msg  SplitLine2F.msg  SplitLine3F.msg  SubType.msg  Tensor.msg  Type.msg
interface/perception/: CMakeLists.txt  package.xml
interface/perception/msg/: AbnormalStatus.msg  BarrierType.msg  BoolTag.msg  Box2D.msg  Box3D.msg  CLInfo.msg  CLStatus.msg  CLType.msg  CameraObjectSupplement.msg  CameraObjectTrackState.msg  CameraRawObject.msg  CarLight.msg  ConfidenceType.msg  CubicCurve.msg  Demomsg.msg  EmLanes.msg  EmObstacle.msg  EmObstacles.msg  HdmapLaneUnit.msg  HdmapLineMark.msg  HeadingStatus.msg  LaneInfo.msg  LaneMark.msg  LaneMarkingQuality.msg  LaneMarkingType.msg  LaneMarkingTypeSection.msg  LaneType.msg  LidarCustomObjectMsg.msg  LidarObjectSupplement.msg  LidarVectorMsg.msg  LocatedInLaneType.msg  MotionState.msg  ObjectMessage.msg  ObjectSubType.msg  ObjectTags.msg  ObjectType.msg  ObsTrajectory.msg  ObservedStatus.msg  ObstacleLaneType.msg  ObstacleStatus.msg  (+29 more)
interface/viewlane/: CMakeLists.txt  package.xml
interface/viewlane/msg/: LaneGeom.msg  ViewLaneInfo.msg
pnc/common/proto/: CMakeLists.txt  package.xml
pnc/common/proto/common/: align.proto  debug.proto  error_code.proto  estop.proto  header.proto  latency_stats.proto  localization_pose.proto  pnc_point.proto  scenario_config.proto  stage_config.proto  task_config.proto  vehicle_config.proto  vehicle_signal.proto  vehicle_state.proto
pnc/common/proto/control/: control.proto  control_config.proto  control_scenario_config.proto  control_task_config.proto  gain_scheduler_config.proto  leadlag_config.proto  mpc_solver_config.proto
pnc/common/proto/interface/: chassis.proto  em_lane.proto  localization.proto  perception_obstacle.proto  prediction_obstacle.proto  routing.proto
pnc/common/proto/planning/: lane_decider_config.proto  object_decision.proto  planning.proto  planning_config.proto  planning_scenario_config.proto  planning_status.proto  planning_task_config.proto  sl_boundary.proto
pnc/common/proto/simulator/: simulator_config.proto
pnc/configs/: CMakeLists.txt  package.xml
pnc/configs/common/: vehicle_config.pb.txt
pnc/configs/planning/: lane_decider_default_config.pb.txt  planning.conf  planning.pb.txt
pnc/configs/planning/scenarios/: emergency_pull_over_config.pb.txt  emergency_stop_config.pb.txt  lane_follow_scenario_config.pb.txt  road_change_scenario_config.pb.txt
pnc/configs/simulator/: simulator.conf
pnc/planning/: CMakeLists.txt  package.xml  planning.cc  planning.h
pnc/planning/common/: indexed_list.h  local_view.h
pnc/planning/common/constraint_checker/: constraint_checker.cc  constraint_checker.h
pnc/planning/common/frame/: frame.cc  frame.h
pnc/planning/common/obstacle/: obstacle.cc  obstacle.h  obstacle_test.cc  path_decision.cc  path_decision.h
pnc/planning/common/path/: discretized_path.cc  discretized_path.h  path_boundary.cc  path_boundary.h  path_data.cc  path_data.h  path_test.cc
pnc/planning/common/planning_gflags/: planning_gflags.cc  planning_gflags.h
pnc/planning/common/planning_internal/: planning_internal.h
pnc/planning/common/reference_line_info/: reference_line_info.cc  reference_line_info.h  reference_line_info_test.cc
pnc/planning/common/speed/: speed_data.cc  speed_data.h  speed_data_test.cc  speed_limit.h  st_boundary.cc  (+5 more)
pnc/planning/scenarios/: scenario.cc  scenario.h  scenario_manager.cc  scenario_manager.h  stage.cc  stage.h
pnc/planning/tasks/: task.cc  task.h  task_factory.cc  task_factory.h
pnc/simulator/debug_tool/: CMakeLists.txt  matplotlibcpp.h  package.xml
pnc/simulator/dynamic_model_simulator/: CMakeLists.txt  package.xml
pnc/simulator/emlanes_simulator/: CMakeLists.txt  package.xml
pnc/simulator/perception_simulator/: CMakeLists.txt  package.xml
pnc/simulator/rviz_xju_panel/: CMakeLists.txt  package.xml  plugin_description.xml
pnc/simulator/rviz_xju_plugins/: CMakeLists.txt  package.xml  plugins_description.xml  rviz_xju_plugins-extras.cmake
(+262 files in other folders)
