<?xml version="1.0"?>
<package format="3">
  <name>perception_nn_msgs</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="todo@todo.abc">pnc</maintainer>
  <license>TODO</license>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>rclcpp</depend>
  <depend>common_msgs</depend>
  <depend>std_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
