<?xml version="1.0"?>
<package format="3">
  <name>viewlane_msgs</name>
  <version>0.0.0</version>
  <description>The viewlane msgs package</description>
  <maintainer email="todo@todo.abc">pnc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>common_msgs</depend>
  <depend>localization_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
