<?xml version="1.0"?>
<package format="3">
  <name>pnc_configs_package</name>
  <version>1.0.0</version>
  <description>The pnc configs package</description>

  <maintainer email="todo@todo.abc">pnc</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
